hphp/test/zend/bad/ext/standard/tests/math/bug62112.php
<?php
var_dump(number_format(2.5, 2, "\0", "'"));